deployment/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: eastshine96/nexthouse-fe:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
