deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexthouse_fe
  labels:
    app: nexthouse_fe
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nexthouse_fe
